# cargo_metadata

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yml  release.yml
src/: bare_version.rs  dependency.rs  diagnostic.rs  errors.rs  lib.rs  libtest.rs  messages.rs  unit_graph.rs  visit.rs
src/libtest/: event.rs  mod.rs  status.rs  type.rs
tests/: selftest.rs  test_samples.rs  visitor.rs
tests/all/: Cargo.toml
tests/all/bare-rust-version/: Cargo.toml
tests/all/bdep/: Cargo.toml
tests/all/devdep/: Cargo.toml
tests/all/featdep/: Cargo.toml
tests/all/namedep/: Cargo.toml
tests/all/oldname/: Cargo.toml
tests/all/optdep/: Cargo.toml
tests/all/path-dep/: Cargo.toml
tests/all/windep/: Cargo.toml
tests/basic_workspace/: Cargo.toml
tests/basic_workspace/ex_lib/: Cargo.toml
