[package]
name = "cargo_metadata"
version = "0.13.0"
authors = ["Oliver Schneider <git-spam-no-reply9815368754983@oli-obk.de>"]
repository = "https://github.com/oli-obk/cargo_metadata"
description = "structured access to the output of `cargo metadata`"
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
camino = { version = "1.0.1", features = ["serde1"] }
cargo-platform = "0.1"
semver = { version = "0.11.0", features = ["serde"] }
semver-parser = "0.10.2"
serde = { version = "1.0.107", features = ["derive"] }
serde_json = { version = "1.0.59", features = ["unbounded_depth"] }

[features]
default = []

[package.metadata.cargo_metadata_test]
some_field = true
other_field = "foo"
